// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppComponent app should be available 1`] = `
<div
  id="root1"
>
  
  
</div>
`;

exports[`AppComponent app should be unavailable 1`] = `
<div
  id="root2"
>
  
  
</div>
`;

exports[`AppComponent should create the app 1`] = `
<div
  id="root0"
>
  
  
</div>
`;
